RESOLVED FIXED129488
REGRESSION(r164835): It broke 10 JSC stress test on 32 bit platforms
https://bugs.webkit.org/show_bug.cgi?id=129488
Summary REGRESSION(r164835): It broke 10 JSC stress test on 32 bit platforms
Csaba Osztrogonác
Reported 2014-02-28 08:41:39 PST
r164834 (on Mavericks) ----------------------- ** The following JSC stress test failures have been introduced: regress/script-tests/string-cons-tower.js.dfg-eager regress/script-tests/string-cons-tower.js.dfg-eager-no-cjit-validate Results for JSC stress tests: 2 failures found. r164836 (on Mavericks) ----------------------- ** The following JSC stress test failures have been introduced: regress/script-tests/call-spread-call.js.default regress/script-tests/call-spread-call.js.no-llint regress/script-tests/call-spread-call.js.always-trigger-copy-phase regress/script-tests/call-spread-call.js.no-cjit-validate-phases regress/script-tests/call-spread-call.js.dfg-eager regress/script-tests/call-spread-call.js.dfg-eager-no-cjit-validate regress/script-tests/string-cons-tower.js.dfg-eager regress/script-tests/string-cons-tower.js.dfg-eager-no-cjit-validate jsc-layout-tests.yaml/js/script-tests/dfg-convert-this-dom-window.js.layout-no-llint jsc-layout-tests.yaml/js/script-tests/dfg-convert-this-dom-window.js.layout-dfg-eager-no-cjit jsc-layout-tests.yaml/js/script-tests/function-call-aliased.js.layout-no-llint jsc-layout-tests.yaml/js/script-tests/function-call-aliased.js.layout-dfg-eager-no-cjit Results for JSC stress tests: 12 failures found. r164831 (on the GTK bot) ------------------------- ** The following JSC stress test failures have been introduced: jsc-layout-tests.yaml/js/script-tests/function-apply-many-args.js.layout-dfg-eager-no-cjit regress/script-tests/string-cons-tower.js.dfg-eager regress/script-tests/string-cons-tower.js.dfg-eager-no-cjit-validate jsc-layout-tests.yaml/js/script-tests/function-apply-many-args.js.layout-no-llint Results for JSC stress tests: 4 failures found. r164841 (on the GTK bot) ------------------------- ** The following JSC stress test failures have been introduced: jsc-layout-tests.yaml/js/script-tests/dfg-convert-this-dom-window.js.layout-no-llint jsc-layout-tests.yaml/js/script-tests/function-apply-many-args.js.layout-dfg-eager-no-cjit regress/script-tests/call-spread-call.js.dfg-eager-no-cjit-validate regress/script-tests/call-spread-call.js.dfg-eager jsc-layout-tests.yaml/js/script-tests/dfg-convert-this-dom-window.js.layout-dfg-eager-no-cjit jsc-layout-tests.yaml/js/script-tests/function-call-aliased.js.layout-no-llint jsc-layout-tests.yaml/js/script-tests/function-call-aliased.js.layout-dfg-eager-no-cjit regress/script-tests/string-cons-tower.js.dfg-eager regress/script-tests/string-cons-tower.js.dfg-eager-no-cjit-validate regress/script-tests/call-spread-call.js.default jsc-layout-tests.yaml/js/script-tests/function-apply-many-args.js.layout-no-llint regress/script-tests/call-spread-call.js.always-trigger-copy-phase regress/script-tests/call-spread-call.js.no-cjit-validate-phases regress/script-tests/call-spread-call.js.no-llint Results for JSC stress tests: 14 failures found.
Attachments
Patch (1.80 KB, patch)
2014-02-28 12:52 PST, Oliver Hunt
mark.lam: review+
Oliver Hunt
Comment 1 2014-02-28 10:07:47 PST
Even with the follow on fix? I'll look into this
Oliver Hunt
Comment 2 2014-02-28 12:52:28 PST
Mark Lam
Comment 3 2014-02-28 12:54:11 PST
Comment on attachment 225482 [details] Patch r=me
Oliver Hunt
Comment 4 2014-02-28 12:58:09 PST
Note You need to log in before you can comment on or make changes to this bug.