REGRESSION(r164835): It broke 10 JSC stress test on 32 bit platforms https://bugs.webkit.org/show_bug.cgi?id=129488

Reviewed by Mark Lam.

Whoops, modify the right register.

* jit/JITCall32_64.cpp:
(JSC::JIT::compileLoadVarargs):

Canonical link: https://commits.webkit.org/147564@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@164880 268f45cc-cd09-0410-ab3c-d52691b4dbfc